Fix #10 (#11)
* Add sense2vec

* Download vectors in pipeline

* Reduce GitLab CI runner output

* Fix workaround for dind workflow

* Revert to original workaround
